# UnityPathTracing

./: .gitignore  .gitmodules  readme.md
PrepareLight/: .gitignore  UnityBindless.sln
PrepareLight/UnityRTXDI/: BindlessInstance.cpp  BindlessInstance.h  FrameData.h  RenderSystem.cpp  RenderSystem.h  RenderingPlugin.cpp  UnityPlugin.vcxproj.filters  UnityRTXDI.vcxproj
PrepareLight/UnityRTXDI/Unity/: IUnityGraphics.h  IUnityGraphicsD3D12.h  IUnityInterface.h  IUnityLog.h
RenderingPlugin/: .gitignore  CMakeLists.txt  UnityNRD.sln  build.bat
RenderingPlugin/RenderingPlugin/: DLRRInstance.cpp  RenderSystem.cpp
UnityProject/: .gitignore
UnityProject/Assets/: DefaultVolumeProfile.asset  UniversalRenderPipelineGlobalSettings.asset
UnityProject/Assets/Anim/: Adam.controller
UnityProject/Assets/Anim/Materials/SkinedMat/: Adam_Legs_rubber.mat
UnityProject/Assets/Arcade/: Arcade.fbx  Arcade.unity
UnityProject/Assets/Arcade/Materials/: Cabinet.mat  Chair_Blue.mat  Chair_Orange.mat  CheckerTile.mat  Poster.mat  Wall.mat
UnityProject/Assets/Materials/: Light 2.mat  Light.mat  Mirror.mat  Test 1.mat  Test 2.mat  Test 3.mat
UnityProject/Assets/Models/: defaultMat.mat
UnityProject/Assets/Scenes/: NRDSample.unity  Profiler.prefab  SampleScene.unity
UnityProject/Assets/Scripts/: ComputeTest.cs  ToggleAttribute.cs
UnityProject/Assets/Scripts/Denoising/DLRR/: DLRRDenoiser.cs  RRFrameData.cs
UnityProject/Assets/Scripts/Denoising/NRD/: FrameData.cs  NRDDenoiser.cs  NRDDescs.cs  NRDUtil.cs  NrdTextureResource.cs
UnityProject/Assets/Scripts/Denoising/NRI/: NRIUtil.cs  NriResourceState.cs
UnityProject/Assets/Scripts/Editor/: DemoRenderFeatureEditor.cs  LitRayTracingShader.cs  MaterialShaderReplacer.cs  PathTracingAdditionalLightDataEditor.cs  PathTracingFeatureEditor.cs  RandomLightSpawnerEditor.cs  RtxdiFeatureEditor.cs  ToggleDrawer.cs
UnityProject/Assets/Scripts/NativePlugin/DLRR/: DlrrDenoiser.cs  DlrrFrameData.cs
UnityProject/Assets/Scripts/NativePlugin/NRD/: NrdDenoiser.cs  NrdDescs.cs  NrdFrameData.cs  NrdSettings.cs
UnityProject/Assets/Scripts/NativePlugin/NRI/: DXGI_FORMAT.cs  NriDescs.cs  NriFormat.cs  NriTextureResource.cs  NriUtil.cs
UnityProject/Assets/Scripts/NativePlugin/PrepareLight/: GPUScene.cs  MeshLight.cs  PrepareLightFrameData.cs  PrepareLightResource.cs  TriangleLight.cs
UnityProject/Assets/Scripts/PathTracing/: CameraFrameState.cs  LightCollector.cs  PathTracingDataBuilder.cs  PathTracingFeature.cs  PathTracingPass.cs  PathTracingResourcePool.cs  PathTracingSetting.cs  RenderResourceType.cs  RtxdiFeature.cs  RtxdiResources.cs  RtxdiSettingPreset.cs  ShaderIDs.cs  UnityRTXDI.cs
UnityProject/Assets/Scripts/PathTracing/Data/: BRDFPathTracing_Parameters.cs  GlobalConstants.cs  PTContextItem.cs  ResamplingConstants.cs
UnityProject/Assets/Scripts/PathTracing/RenderPass/: AccumulatePass.cs  AutoExposurePass.cs  CompositionPass.cs  DlssBeforePass.cs  DlssRRPass.cs  GBufferPass.cs  GBufferRasterPass.cs  NrdPass.cs  OpaquePass.cs  OutputBlitPass.cs  PrepareLightPass.cs  ReferencePtPass.cs  RtxdiDlssBeforePass.cs  RtxdiPassContext.cs  SharcPass.cs  TaaPass.cs  (+1 more)
UnityProject/Assets/Scripts/PrepareLight/: GPUScene.cs  PrepareLightResource.cs
UnityProject/Assets/Scripts/Profiling/: Profiler.cs  RenderPassMarkers.cs
UnityProject/Assets/Scripts/ReferencePT/: ReferencePTFeature.cs
UnityProject/Assets/Scripts/Rtxdi/: DemoRenderFeature.cs  DemoRenderPass.cs  DemoResource.cs  ImportanceSamplingContext.cs  PrepareLightResource.cs  RtxdiNative.cs  RtxdiParameters.cs  RtxdiUtils.cs
UnityProject/Assets/Scripts/Runtime/: DynamicSunIntensity.cs  FalcorCamera.cs  FoldoutHeaderAttribute.cs  PathTracingAdditionalLightData.cs  PathTracingSettingGUI.cs  RandomLightMotion.cs  RandomLightSpawner.cs
UnityProject/Assets/Scripts/mini/: RtxdiResources.cs
UnityProject/Assets/Settings/: RPAsset.asset  Renderer.asset  RtxdiSettingPreset.asset  UniversalRenderPipelineGlobalSettings.asset
UnityProject/Assets/ShaderBalls/Mat/: Black.mat  Brick_Yellow.mat  Concrete_Shimizu.mat  Gold.mat  Green.mat  Mirror.mat  Red.mat  Red_Skin.mat  SSS 2.mat  SSS 3.mat  SSS.mat  Tile_White.mat
UnityProject/Assets/Shaders/: PrepareLight.compute
UnityProject/Assets/Shaders/Include/: AreaLights.hlsl  DirectionalLights.hlsl  GlobalConstants.cs  GlobalConstants.cs.hlsl  LightRayTracingShared.hlsl  Payload.hlsl  PointLights.hlsl  RayTracingShared.hlsl  Shared.hlsl  SpotLights.hlsl
UnityProject/Assets/Shaders/PostProcess/: Accumulate.compute  AutoExposure.compute  Composition.compute  DlssBefore.compute  Final.shader  RtxdiDlssBefore.compute  Taa.compute
UnityProject/Assets/Shaders/RTXDI/: ImportanceSamplingContext.h  RtxdiParameters.h  RtxdiTypes.h  RtxdiUtils.h
UnityProject/Assets/Shaders/RayTracing/: BRDFPTParameters.h  GBuffer.hlsl  GBuffer.raytrace  GBufferRaster.hlsl  HelperFunctions.hlsl  HelperFunctions.hlsli  LightShaping.hlsl  PolymorphicLight.hlsl  ReferencePt.hlsl  ReferencePt.raytrace  ShaderParameters.hlsl  ShadingHelpers.hlsl  TraceOpaque.hlsl  TraceTransparent.hlsl  TriangleLight.hlsl  TriangleLight.hlsli
UnityProject/Assets/Shaders/Sharc/: SharcResolve.compute  SharcUpdate.hlsl  SharcUpdate.raytrace
UnityProject/Assets/Shaders/Surface/: Fabric.shader  Lit.shader  LitWithRayTracing.shader  Skin.shader  TMP_SDF Ray.shader
UnityProject/Assets/Shaders/donut/: brdf.hlsli  utils.hlsli
UnityProject/Assets/TextMesh Pro/Fonts/: SourceHanSansSC-Normal SDF.asset
UnityProject/Assets/TextMesh Pro/Shaders/: TMP_SDF-Mobile.shader
UnityProject/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
UnityProject/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
(+148 files in other folders)
